tests/invalid/bytes_unknown_method_call/main.py
def run_case() -> None:
    b: bytes = b"abc"
    b.nope()


if __name__ == "__main__":
    run_case()
